--- a/app/static/css/pictonic.css
+++ b/app/static/css/pictonic.css
@@ -43,10 +43,10 @@ button[class^="icon-"]
 {
 	font-family: "pictonic";
 	font-weight: normal; font-style: normal;
-	-webkit-font-smoothing:  antialiased !important;
+	/*-webkit-font-smoothing:  antialiased !important;
 	-moz-font-smoothing:  antialiased !important;
 	font-smoothing:  antialiased !important;
-	line-height:1em;
+	line-height:1em;*/
 	font-weight: bold; 
 }
  
