--- a/app/templates/base_logged_in.html
+++ b/app/templates/base_logged_in.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link href="/static/css/bootstrap.css" rel="stylesheet" media="screen">
     <link href="/static/css/pictonic.css" rel="stylesheet">
+    <link href="/static/css/magicsuggest.css" rel="stylesheet">
     <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="/static/js/bootstrap.min.js" async></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/magicsuggest-min.js"></script>
     <title>{{ title }}</title>
 </head>
     <body>
@@ -21,11 +23,9 @@
                 </div>
                 <div class="navbar-collapse collapse navbar-inverse-collapse">
                   <ul class="nav navbar-nav">
-                    <li><a href="#">My Pictures</a></li>
-                    <li><a href="#">My Groups</a></li>
+                    <li><a href="/my/pictures">My Pictures</a></li>
+                    <li><a href="/my/groups">My Groups</a></li>
                     <li><a href="/upload">Upload Pictures</a></li>
- 
-
                   </ul>
                   <form class="navbar-form navbar-right">
                     <input type="text" class="form-control col-lg-8" placeholder="Search">
