--- a/app/templates/base_logged_in.html
+++ b/app/templates/base_logged_in.html
@@ -14,8 +14,8 @@
     <body>
         <div class="container">
             <div class="col-lg-10">
-                <h1>{{ title }}</h1>
-                <div class="navbar navbar-inverse">
+                {% block header %}{% endblock %}
+                <div class="navbar navbar-default">
                 <div class="navbar-header">
                   <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
                   </button>
@@ -27,8 +27,8 @@
                     <li><a href="/my/groups">My Groups</a></li>
                     <li><a href="/upload">Upload Pictures</a></li>
                   </ul>
-                  <form class="navbar-form navbar-right">
-                    <input type="text" class="form-control col-lg-8" placeholder="Search">
+                  <form class="navbar-form navbar-right" style="padding-top: 5px">
+                    <input type="text" class="form-control col-lg-8 input-sm" placeholder="Search">
                   </form>
                 </div>
               </div>
