--- a/app/templates/user_management/forgot_password.html
+++ b/app/templates/user_management/forgot_password.html
@@ -28,11 +28,11 @@
       </p>  
       
       <p style="text-align: right; margin-top: 30px;">
-      <a href="\login" class="icon-tl-undo btn btn-default" style="margin-right: 5px; width: 112px;">
+      <a href="/login" class="icon-tl-undo btn btn-default" style="margin-right: 5px; width: 112px;">
             <span class="btn-txt" style="padding-right: 50px">cancel</span>
       </a>
       
-      <button class="icon-rocket2 btn btn-success" id="submit" data-loading-text="sending..." style="padding-right: 90px">
+      <button class="icon-rocket2 btn btn-success" id="submit" data-loading-text="sending..." style="width: 130px">
          send mail
       </button>
 
