--- a/app/templates/user_management/login.html
+++ b/app/templates/user_management/login.html
@@ -28,7 +28,7 @@
       </p>
       
       <p style="text-align: right; margin-top: 25px;">
-        <button type="submit" class="icon-rocket2 btn btn-success" value="submit">
+        <button type="submit" class="icon-rocket2 btn btn-success" value="submit" style="width: 95px">
            login
         </button>
      </p>
