--- a/app/templates/user_management/reset_password.html
+++ b/app/templates/user_management/reset_password.html
@@ -32,7 +32,7 @@
             <span class="btn-txt" style="padding-right: 50px">cancel</span>
       </a>
       
-      <button type="submit" class="icon-rocket2 btn btn-success" value="submit">
+      <button type="submit" class="icon-rocket2 btn btn-success" value="submit" style="width: 115px;">
          <span class="btn-txt" style="padding-right: 60px">submit</span>
       </button>
       </p>
