--- a/app/templates/logged_in/home.html
+++ b/app/templates/logged_in/home.html
@@ -1,5 +1,7 @@
 {% extends "base_logged_in.html" %}
 
+{% block header %}<h1>{{ title }}</h1>{% endblock %}
+
 {% block content %}
 
 {% endblock %}
