--- a/app/templates/user_management/registration.html
+++ b/app/templates/user_management/registration.html
@@ -100,7 +100,7 @@
              <span class="btn-txt" style="padding-right: 50px">cancel</span>
        </a>
  
-       <button type="submit" class="icon-rocket2 btn btn-success" value="submit" id="submit" style="padding-right: 75px" data-loading-text="sending">
+       <button type="submit" class="icon-rocket2 btn btn-success" value="submit" id="submit" style="width: 115px" data-loading-text="sending">
           register
        </button>
  </p>
