--- a/app/templates/base_logged_in.html
+++ b/app/templates/base_logged_in.html
@@ -5,34 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link href="/static/css/bootstrap.css" rel="stylesheet" media="screen">
     <link href="/static/css/pictonic.css" rel="stylesheet">
-    <link href="/static/css/magicsuggest.css" rel="stylesheet">
+    {% block css %}{% endblock %}
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/magicsuggest-min.js"></script>
+    {% block scriptlibs %}{% endblock %}
     <title>{{ title }}</title>
 </head>
     <body>
         <div class="container">
             <div class="col-lg-10">
-                {% block header %}{% endblock %}
-                <div class="navbar navbar-default">
-                <div class="navbar-header">
-                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
-                  </button>
-                  <a class="navbar-brand" href="/home">Simple Image Sharer</a>
-                </div>
-                <div class="navbar-collapse collapse navbar-inverse-collapse">
-                  <ul class="nav navbar-nav">
-                    <li><a href="/my/pictures">My Pictures</a></li>
-                    <li><a href="/my/groups">My Groups</a></li>
-                    <li><a href="/upload">Upload Pictures</a></li>
-                  </ul>
-                  <form class="navbar-form navbar-right" style="padding-top: 5px">
-                    <input type="text" class="form-control col-lg-8 input-sm" placeholder="Search">
-                  </form>
-                </div>
-              </div>
                 
+                {% block header %}{% endblock %}
+                
+
+    <div class="navbar navbar-default">
+        
+            <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/home">Simple Image Sharer</a>
+            </div>
+            
+            <div class="navbar-collapse collapse navbar-inverse-collapse">
+                
+                    <ul class="nav navbar-nav">
+                            <li><a href="/my/pictures">My Pictures</a></li>
+                            <li><a href="/my/groups">My Groups</a></li>
+                            <li><a href="/upload">Upload Pictures</a></li>
+                    </ul>
+                    
+                    <form class="navbar-form navbar-left">
+                            <input type="text" class="form-control col-lg-8" placeholder="Search">
+                    </form>
+                    
+                    
+            </div>
+    </div>
+                
+                
+
                 {% with messages = get_flashed_messages(with_categories=true) %}
                     {% if messages %}
                         {% for category, message in messages %}
@@ -51,11 +65,12 @@
                 {% block content %}
                 {% endblock %}
                 
-                <div style="text-align: right">
+                <div style="float: left">{% block breadcrumbs %}{% endblock %}</div>
+                <div style="float: right">
                     <span class="help-link">Welcome {{ current_user.user_name | capitalize }}! | </span>
                     <a href="/logout" class="help-link">Sign Out?</a>
-
                 </div>
+                <div style="clear: both"></div>
             </div>
         </div>
     </body>
